add hero video, implementation testimonios, edit css de las pages efecto parallax y ccontacto page para que funcione

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,12 @@
 .animate-scroll {
     animation: scroll 30s linear infinite;
 }
+
+.animate-scroll2 {
+    animation: scroll 60s linear infinite;
+}
+
+.animate-scroll2:hover {
+    animation-play-state: paused;
+    
+}
