--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,9 @@
     scroll-snap-align: start;
     /* Cada sección se alineará con el inicio del contenedor */
 }
+
+
+body {
+    background-color: #000000;
+    /* O el color exacto de tu fondo, como #111827 si usas bg-gray-900 */
+}
