--- a/src/PantallaPage.css
+++ b/src/PantallaPage.css
@@ -1,28 +1,37 @@
 :root {
+    --swiper-theme-color: #c51b27;
     --transition-duration: 1.2s;
     --transition-timing: ease;
 }
 
+/* ESTILOS CELU */
+
+
 .pantallas-swiper .swiper-wrapper {
+    align-items: center;
     transition-timing-function: var(--transition-timing);
 }
 
 .pantallas-swiper .swiper-slide {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    z-index: 1;
+    gap: 1rem;
+    padding: 1rem 0;
+    transform: scale(0.85);
+    opacity: 0.5;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+}
 
+.pantallas-swiper .swiper-slide-active {
+    transform: scale(1);
+    opacity: 1;
 }
 
 .pantallas-swiper .slide-img {
-    width: 500px;
-    aspect-ratio: 1;
-    filter: blur(20px);
-    transition: all var(--transition-duration) var(--transition-timing);
-    scale: 0.5;
-    opacity: 1;
-    transform: translateX(70%);
+    width: 70%;
+    max-width: 250px;
+    aspect-ratio: 1 / 1;
 }
 
 .pantallas-swiper .slide-img img {
@@ -31,61 +40,106 @@
     object-fit: contain;
 }
 
-.pantallas-swiper .slide-img-blur {
-    opacity: 0;
-    position: absolute;
-}
-
-.pantallas-swiper .swiper-slide-active .slide-img {
-    scale: 2;
-    transform: translateX(-80%);
-    opacity: 0;
-}
-
-.pantallas-swiper .swiper-slide-next .slide-img {
-    filter: blur(0px);
-    scale: 1.6;
-    transform: translateX(30%);
-    opacity: 1;
-}
-
-.pantallas-swiper .swiper-slide-next .slide-img-blur {
-    opacity: 0.5;
-    filter: blur(50px);
-    z-index: -1;
-    transform: translate(100%);
-}
-
-.pantallas-swiper .swiper-slide-next .slide-img-blur img {
-    scale: 2;
-}
-
-.pantallas-swiper .swiper-slide-next+.swiper-slide .slide-img {
-    filter: blur(10px);
-    scale: 0.9;
-    opacity: 1;
-}
-
-.pantallas-swiper .swiper-slide-next {
-    z-index: 10;
-    transform: translateX(50%)
-}
-
-
 .pantallas-swiper .slide-content {
-    position: absolute;
-    opacity: 0;
-    filter: blur(20px);
-    transition: all var(--transition-duration) var(--transition-timing);
-    width: 25vw;
+    width: 90%;
+    max-width: 300px;
+    text-align: center;
     color: white;
 }
 
-.pantallas-swiper .swiper-slide-next .slide-content {
-    transform: translateX(-100%);
-    opacity: 1;
-    filter: blur(0);
+.pantallas-swiper .slide-img-blur {
+    display: none;
 }
+/* ESTILOS PC */
+
+
+@media (min-width: 1024px) {
+
+    /*Anula celu */
+    .pantallas-swiper .swiper-slide,
+    .pantallas-swiper .swiper-slide-active {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        transform: none;
+        opacity: 1;
+        gap: 0;
+        padding: 0;
+        z-index: 1;
+    }
+
+    /* animacion pc*/
+    .pantallas-swiper .slide-img {
+        width: 500px;
+        max-width: none;
+        aspect-ratio: 1;
+        filter: blur(20px);
+        transition: all var(--transition-duration) var(--transition-timing);
+        scale: 0.5;
+        opacity: 1;
+        transform: translateX(70%);
+    }
+
+    .pantallas-swiper .slide-img-blur {
+        display: block;
+        opacity: 0;
+        position: absolute;
+    }
+
+    .pantallas-swiper .swiper-slide-active .slide-img {
+        scale: 2;
+        transform: translateX(-80%);
+        opacity: 0;
+    }
+
+    .pantallas-swiper .swiper-slide-next .slide-img {
+        filter: blur(0px);
+        scale: 1.6;
+        transform: translateX(30%);
+        opacity: 1;
+    }
+
+    .pantallas-swiper .swiper-slide-next .slide-img-blur {
+        opacity: 0.5;
+        filter: blur(50px);
+        z-index: -1;
+        transform: translate(100%);
+    }
+
+    .pantallas-swiper .swiper-slide-next .slide-img-blur img {
+        scale: 2;
+    }
+
+    .pantallas-swiper .swiper-slide-next+.swiper-slide .slide-img {
+        filter: blur(10px);
+        scale: 0.9;
+        opacity: 1;
+    }
+
+    .pantallas-swiper .swiper-slide-next {
+        z-index: 10;
+        transform: translateX(50%);
+    }
+
+    .pantallas-swiper .slide-content {
+        position: absolute;
+        opacity: 0;
+        filter: blur(20px);
+        transition: all var(--transition-duration) var(--transition-timing);
+        width: 25vw;
+        max-width: none;
+        color: white;
+        text-align: left;
+    }
+
+    .pantallas-swiper .swiper-slide-next .slide-content {
+        transform: translateX(-100%);
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+/* ESTILOS COMUNES (TEXTO, BOTONES, NAVEGACION)             */
 
 .slide-content h2 {
     font-weight: 800;
@@ -94,6 +148,8 @@
 
 .slide-content p {
     line-height: 1.75;
+    margin-bottom: 1.5rem;
+
 }
 
 .slide-content .explore-btn {
@@ -103,12 +159,13 @@
     border-radius: 9999px;
     padding: 0.75rem 1.5rem;
     font-weight: 600;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     font-size: 1rem;
     text-transform: uppercase;
-    margin-top: 2rem;
+    margin-top: 1rem;
     transition: all 0.3s;
+    gap: 0.5rem;
 }
 
 .slide-content .explore-btn:hover {
@@ -119,24 +176,36 @@
 .slide-content .explore-btn svg {
     width: 20px;
     height: 20px;
-    margin-left: 10px;
 }
 
-/* FLECHAS DE NAVEGACIÓN */
-
+/* NAVEGACIÓN Y PAGINACIÓN */
 .pantallas-swiper .swiper-button-next,
 .pantallas-swiper .swiper-button-prev {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     z-index: 50;
-
     width: 50px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 9999px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: none;
+}
+
+@media (min-width: 1024px) {
+
+    .pantallas-swiper .swiper-button-next,
+    .pantallas-swiper .swiper-button-prev {
+        display: flex;
+    }
+}
+
+
+.pantallas-swiper .swiper-button-next:hover,
+.pantallas-swiper .swiper-button-prev:hover {
+    background-color: #9f0712;
 }
 
 .pantallas-swiper .swiper-button-next::after,
@@ -144,11 +213,6 @@
     color: white;
     font-size: 20px;
     font-weight: 800;
-}
-
-.pantallas-swiper .swiper-button-next:hover,
-.pantallas-swiper .swiper-button-prev:hover {
-    background-color: #9f0712;
 }
 
 .pantallas-swiper .swiper-button-prev {
@@ -159,16 +223,12 @@
     right: 40px;
 }
 
-
-/* PAGINACIÓN */
 .pantallas-swiper .swiper-pagination {
     position: absolute;
     bottom: 30px;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
     z-index: 10;
 }
 
@@ -177,7 +237,7 @@
     height: 10px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50%;
-    margin: 0 8px;
+    margin: 0 8px !important;
     cursor: pointer;
     transition: background-color 0.2s ease, width 0.3s ease;
 }
@@ -190,5 +250,4 @@
 
 .yarl__container {
     background-color: rgba(0, 0, 0, 0.95) !important;
-    /* Negro muy oscuro, casi opaco */
 }
